Cloud Build Fix #32

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,14 @@
 steps:
 # Build and deploy the backend
-- name: 'gcr.io/cloud-builders/docker:20.10.17' # Pinned to a stable version
+- name: 'gcr.io/cloud-builders/docker'
   id: 'Build Backend Docker Image'
   args: [ 'build', '-t', '${_REGION}-docker.pkg.dev/$PROJECT_ID/cerberus-images/cerberus-backend:$BUILD_ID', './cerberus_universal_backend' ]
 
-- name: 'gcr.io/cloud-builders/docker:20.10.17' # Pinned to a stable version
+- name: 'gcr.io/cloud-builders/docker'
   id: 'Push Backend Docker Image'
   args: [ 'push', '${_REGION}-docker.pkg.dev/$PROJECT_ID/cerberus-images/cerberus-backend:$BUILD_ID' ]
 
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:460.0.0' # Pinned to a stable version
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Deploy Backend to Cloud Run'
   entrypoint: gcloud
   args:
@@ -27,7 +27,7 @@ steps:
     - '--set-secrets=DB_USER=DB_USER:latest,DB_PASS=DB_PASSWORD:latest,DB_NAME=DB_NAME:latest,DB_CONNECTION_NAME=DB_CONNECTION_NAME:latest,FLASK_SECRET_KEY=FLASK_SECRET_KEY:latest,PGCRYPTO_SECRET_KEY=PGCRYPTO_SECRET_KEY:latest,BLAIR_STRIPE_SECRET_KEY=BLAIR_STRIPE_SECRET_KEY:latest,COX_STRIPE_SECRET_KEY=COX_STRIPE_SECRET_KEY:latest,EMMONS_STRIPE_SECRET_KEY=EMMONS_STRIPE_SECRET_KEY:latest,GAUNTT_STRIPE_SECRET_KEY=GAUNTT_STRIPE_SECRET_KEY:latest,MINTZ_STRIPE_SECRET_KEY=MINTZ_STRIPE_SECRET_KEY:latest,TICE_STRIPE_SECRET_KEY=TICE_STRIPE_SECRET_KEY:latest,TULLOCH_STRIPE_SECRET_KEY=TULLOCH_STRIPE_SECRET_KEY:latest,LEUDEKE_STRIPE_SECRET_KEY=LEUDEKE_STRIPE_SECRET_KEY:latest,WHITSON_STRIPE_SECRET_KEY=WHITSON_STRIPE_SECRET_KEY:latest,BLAIR_STRIPE_WEBHOOK_KEY=BLAIR_STRIPE_WEBHOOK_KEY:latest,COX_STRIPE_WEBHOOK_KEY=COX_STRIPE_WEBHOOK_KEY:latest,EMMONS_STRIPE_WEBHOOK_KEY=EMMONS_STRIPE_WEBHOOK_KEY:latest,GAUNTT_STRIPE_WEBHOOK_KEY=GAUNTT_STRIPE_WEBHOOK_KEY:latest,MINTZ_STRIPE_WEBHOOK_KEY=MINTZ_STRIPE_WEBHOOK_KEY:latest,TICE_STRIPE_WEBHOOK_KEY=TICE_STRIPE_WEBHOOK_KEY:latest,WHITSON_STRIPE_WEBHOOK_KEY=WHITSON_STRIPE_WEBHOOK_KEY:latest'
 
 # Install Flutter SDK once and cache it for both frontends
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:460.0.0' # Pinned to a stable version
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Install and Cache Flutter SDK'
   entrypoint: 'bash'
   args:
@@ -51,7 +51,7 @@ steps:
       fi
 
 # Build and deploy the cerberus_frontend
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:460.0.0' # Pinned to a stable version
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Get dependencies for Cerberus Frontend'
   entrypoint: 'bash'
   args:
@@ -61,7 +61,7 @@ steps:
       flutter pub get
   dir: 'cerberus_frontend' # Change working directory for this step
 
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:460.0.0' # Pinned to a stable version
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Build Cerberus Frontend'
   entrypoint: 'bash'
   args:
@@ -71,12 +71,12 @@ steps:
       flutter build web --release
   dir: 'cerberus_frontend' # Change working directory for this step
 
-- name: 'gcr.io/cloud-builders/firebase:3.22.0' # Pinned to a stable version (example)
+- name: 'gcr.io/cloud-builders/firebase'
   id: 'Deploy Cerberus Frontend'
   args: ['deploy', '--only', 'hosting:cerberus']
 
 # Build and deploy the universal_campaign_frontend
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:460.0.0' # Pinned to a stable version
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Get dependencies for Universal Campaign Frontend'
   entrypoint: 'bash'
   args:
@@ -86,7 +86,7 @@ steps:
       flutter pub get
   dir: 'universal_campaign_frontend' # Change working directory for this step
 
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:460.0.0' # Pinned to a stable version
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Build Universal Campaign Frontend'
   entrypoint: 'bash'
   args:
@@ -96,7 +96,7 @@ steps:
       flutter build web --release
   dir: 'universal_campaign_frontend' # Change working directory for this step
 
-- name: 'gcr.io/cloud-builders/firebase:3.22.0' # Pinned to a stable version (example)
+- name: 'gcr.io/cloud-builders/firebase'
   id: 'Deploy Universal Campaign Frontend'
   args: ['deploy', '--only', 'hosting:campaigns']
 
