Fix: Add unzip to Flutter SDK installation for Dart SDK extraction

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -39,7 +39,7 @@ steps:
         /flutter/bin/flutter doctor
       else
         echo "Flutter SDK not found in cache. Cloning and installing..."
-        apt-get update && apt-get install -y git # Install git for cloning
+        apt-get update && apt-get install -y git unzip # Install git and unzip for cloning and dart sdk extraction
         git clone https://github.com/flutter/flutter.git /flutter
         git config --global --add safe.directory /flutter # Add safe directory for git ownership issue
         cd /flutter
