--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -74,10 +74,10 @@ steps:
       flutter build web --release
   dir: 'cerberus_frontend' # Change working directory for this step
 
-- name: 'gcr.io/cloud-builders/npm'
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Deploy Cerberus Frontend'
+  entrypoint: 'bash'
   args:
-    - 'bash'
     - '-c'
     - |
       npm install -g firebase-tools@13.11.2 && \
