Cloud Build Fix #41

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -40,14 +40,12 @@ steps:
         /flutter/bin/flutter doctor
       else
         echo "Flutter SDK not found in cache. Cloning and installing..."
-        apt-get update && apt-get install -y git unzip nodejs npm # Install git, unzip, nodejs, and npm for cloning, dart sdk extraction, and firebase-tools
+        apt-get update && apt-get install -y git unzip # Install git, unzip for cloning, and dart sdk extraction
         git clone https://github.com/flutter/flutter.git /flutter
         git config --global --add safe.directory /flutter # Add safe directory for git ownership issue
         cd /flutter
-        git checkout stable
-        git pull
+        git checkout 3.22.2
         ./bin/flutter --version # Check Flutter version
-        ./bin/flutter channel stable
         ./bin/flutter upgrade
         echo "Running flutter doctor..."
         ./bin/flutter doctor
@@ -80,6 +78,7 @@ steps:
   args:
     - '-c'
     - |
+      apt-get update && apt-get install -y nodejs npm && \
       npm install -g firebase-tools@13.11.2 && \
       firebase deploy --only 'hosting:cerberus'
   dir: 'cerberus_frontend'
@@ -111,6 +110,7 @@ steps:
   args:
     - '-c'
     - |
+      apt-get update && apt-get install -y nodejs npm && \
       npm install -g firebase-tools@13.11.2 && \
       firebase deploy --only 'hosting:campaigns'
 
