--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -81,7 +81,7 @@ steps:
     - |
       apt-get update && apt-get install -y nodejs npm && \
       npm install -g firebase-tools@13.11.2 && \
-      firebase deploy --only 'hosting:cerberus'
+      firebase deploy --only 'hosting:cerberus' --project '${_PROJECT_ID}'
   dir: 'cerberus_frontend'
 
 # Build and deploy the universal_campaign_frontend
@@ -114,7 +114,7 @@ steps:
     - |
       apt-get update && apt-get install -y nodejs npm && \
       npm install -g firebase-tools@13.11.2 && \
-      firebase deploy --only 'hosting:campaigns'
+      firebase deploy --only 'hosting:campaigns' --project '${_PROJECT_ID}'
 
 images:
 - '${_REGION}-docker.pkg.dev/$PROJECT_ID/cerberus-images/cerberus-backend:$BUILD_ID'
