--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -81,7 +81,7 @@ steps:
     - |
       apt-get update && apt-get install -y nodejs npm && \
       npm install -g firebase-tools@13.11.2 && \
-      firebase deploy --only 'hosting:cerberus' --project '${_PROJECT_ID}'
+      firebase deploy --only 'hosting:cerberus' --project 'cerberus-data-cloud'
 
 # Build and deploy the universal_campaign_frontend
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -113,7 +113,7 @@ steps:
     - |
       apt-get update && apt-get install -y nodejs npm && \
       npm install -g firebase-tools@13.11.2 && \
-      firebase deploy --only 'hosting:campaigns' --project '${_PROJECT_ID}'
+      firebase deploy --only 'hosting:campaigns' --project 'cerberus-data-cloud'
 
 images:
 - '${_REGION}-docker.pkg.dev/$PROJECT_ID/cerberus-images/cerberus-backend:$BUILD_ID'
