--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -80,7 +80,7 @@ steps:
     - '-c'
     - |
       apt-get update && apt-get install -y nodejs npm && \
-      npm install -g firebase-tools@latest && \
+      npm install -g firebase-tools@13.11.2 && \
       npx firebase-tools deploy --only 'hosting:cerberus' --project 'cerberus-data-cloud'
 
 # Build and deploy the universal_campaign_frontend
@@ -113,7 +113,7 @@ steps:
     - '-c'
     - |
       apt-get update && apt-get install -y nodejs npm && \
-      npm install -g firebase-tools@latest && \
+      npm install -g firebase-tools@13.11.2 && \
       npx firebase-tools deploy --only 'hosting:campaigns' --project 'cerberus-data-cloud'
 
 images:
