--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -104,6 +104,7 @@ steps:
       export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" # Add flutter to PATH
       flutter create . --platforms web
       flutter build web --release
+      ls -la build/web
   dir: 'universal_campaign_frontend' # Change working directory for this step
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
