--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -83,38 +83,19 @@ steps:
       npm install -g firebase-tools@13.11.2 && \
       npx firebase-tools deploy --only 'hosting:cerberus' --project 'cerberus-data-cloud'
 
-# Build and deploy the universal_campaign_frontend
+# Build and deploy all campaign frontends
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  id: 'Get dependencies for Universal Campaign Frontend'
+  id: 'Build and Deploy All Campaigns'
   entrypoint: 'bash'
   args:
     - '-c'
     - |
-      export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" # Add flutter to PATH
-      flutter pub get
-  dir: 'universal_campaign_frontend' # Change working directory for this step
-
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  id: 'Build Universal Campaign Frontend'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      apt-get update && apt-get install -y unzip
-      export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" # Add flutter to PATH
-      flutter build web --release
-      ls -la build/web
-  dir: 'universal_campaign_frontend' # Change working directory for this step
-
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  id: 'Deploy Universal Campaign Frontend'
-  entrypoint: 'bash'
-  args:
-    - '-c'
-    - |
-      apt-get update && apt-get install -y nodejs npm && \
-      npm install -g firebase-tools@13.11.2 && \
-      npx firebase-tools deploy --only 'hosting:campaigns' --project 'cerberus-data-cloud'
+      export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+      apt-get update && apt-get install -y nodejs npm
+      npm install -g firebase-tools@13.11.2
+      chmod +x build_campaigns.sh
+      ./build_campaigns.sh
+  dir: 'universal_campaign_frontend'
 
 images:
 - '${_REGION}-docker.pkg.dev/$PROJECT_ID/cerberus-images/cerberus-backend:$BUILD_ID'
