Cloud Build Fix #53

--- a/.firebaserc
+++ b/.firebaserc
@@ -6,7 +6,7 @@
     "cerberus-data-cloud": {
       "hosting": {
         "cerberus": [
-          "cerberus-site"
+          "cerberus-site-7c3ed"
         ],
         "emmons": [
           "emmons-site"
