--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,7 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   id: 'Push Backend Docker Image'
   args: [ 'push', '${_REGION}-docker.pkg.dev/$PROJECT_ID/cerberus-images/cerberus-backend:$BUILD_ID' ]
+  waitFor: ['Build Backend Docker Image']
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Deploy Backend to Cloud Run'
@@ -25,6 +26,7 @@ steps:
     - '--add-cloudsql-instances'
     - '${_INSTANCE_CONNECTION_NAME}'
     - '--set-secrets=DB_USER=DB_USER:latest,DB_PASS=DB_PASSWORD:latest,DB_NAME=DB_NAME:latest,DB_CONNECTION_NAME=DB_CONNECTION_NAME:latest,FLASK_SECRET_KEY=FLASK_SECRET_KEY:latest,PGCRYPTO_SECRET_KEY=PGCRYPTO_SECRET_KEY:latest,BLAIR_STRIPE_SECRET_KEY=BLAIR_STRIPE_SECRET_KEY:latest,COX_STRIPE_SECRET_KEY=COX_STRIPE_SECRET_KEY:latest,EMMONS_STRIPE_SECRET_KEY=EMMONS_STRIPE_SECRET_KEY:latest,GAUNTT_STRIPE_SECRET_KEY=GAUNTT_STRIPE_SECRET_KEY:latest,MINTZ_STRIPE_SECRET_KEY=MINTZ_STRIPE_SECRET_KEY:latest,TICE_STRIPE_SECRET_KEY=TICE_STRIPE_SECRET_KEY:latest,TULLOCH_STRIPE_SECRET_KEY=TULLOCH_STRIPE_SECRET_KEY:latest,LEUDEKE_STRIPE_SECRET_KEY=LEUDEKE_STRIPE_SECRET_KEY:latest,WHITSON_STRIPE_SECRET_KEY=WHITSON_STRIPE_SECRET_KEY:latest,BLAIR_STRIPE_WEBHOOK_KEY=BLAIR_STRIPE_WEBHOOK_KEY:latest,COX_STRIPE_WEBHOOK_KEY=COX_STRIPE_WEBHOOK_KEY:latest,EMMONS_STRIPE_WEBHOOK_KEY=EMMONS_STRIPE_WEBHOOK_KEY:latest,GAUNTT_STRIPE_WEBHOOK_KEY=GAUNTT_STRIPE_WEBHOOK_KEY:latest,MINTZ_STRIPE_WEBHOOK_KEY=MINTZ_STRIPE_WEBHOOK_KEY:latest,TICE_STRIPE_WEBHOOK_KEY=TICE_STRIPE_WEBHOOK_KEY:latest,WHITSON_STRIPE_WEBHOOK_KEY=WHITSON_STRIPE_WEBHOOK_KEY:latest'
+  waitFor: ['Push Backend Docker Image']
 
 # Install Flutter SDK once and cache it for both frontends
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -51,6 +53,17 @@ steps:
         ./bin/flutter doctor
       fi
 
+# Install common dependencies
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  id: 'Install Dependencies'
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      apt-get update && apt-get install -y nodejs npm unzip
+      npm install -g firebase-tools@13.11.2
+  waitFor: ['Install and Cache Flutter SDK']
+
 # Build and deploy the cerberus_frontend
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Get dependencies for Cerberus Frontend'
@@ -60,7 +73,8 @@ steps:
     - |
       export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" # Add flutter to PATH
       flutter pub get
-  dir: 'cerberus_frontend' # Change working directory for this step
+  dir: 'cerberus_frontend'
+  waitFor: ['Install Dependencies']
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Build Cerberus Frontend'
@@ -68,10 +82,10 @@ steps:
   args:
     - '-c'
     - |
-      apt-get update && apt-get install -y unzip
       export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" # Add flutter to PATH
       flutter build web --release
-  dir: 'cerberus_frontend' # Change working directory for this step
+  dir: 'cerberus_frontend'
+  waitFor: ['Get dependencies for Cerberus Frontend']
 
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   id: 'Deploy Cerberus Frontend'
@@ -79,9 +93,8 @@ steps:
   args:
     - '-c'
     - |
-      apt-get update && apt-get install -y nodejs npm && \
-      npm install -g firebase-tools@13.11.2 && \
       npx firebase-tools deploy --only 'hosting:cerberus' --project 'cerberus-data-cloud'
+  waitFor: ['Build Cerberus Frontend']
 
 # Build and deploy all campaign frontends
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -91,11 +104,10 @@ steps:
     - '-c'
     - |
       export PATH="/flutter/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-      apt-get update && apt-get install -y nodejs npm
-      npm install -g firebase-tools@13.11.2
       chmod +x build_campaigns.sh
       ./build_campaigns.sh
   dir: 'universal_campaign_frontend'
+  waitFor: ['Install Dependencies']
 
 images:
 - '${_REGION}-docker.pkg.dev/$PROJECT_ID/cerberus-images/cerberus-backend:$BUILD_ID'
