--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -94,6 +94,8 @@ steps:
   args:
     - '-c'
     - |
+      apt-get update && apt-get install -y nodejs npm
+      npm install -g firebase-tools@13.11.2
       npx firebase-tools deploy --only 'hosting:cerberus' --project 'cerberus-data-cloud'
   waitFor: ['Build Cerberus Frontend']
 
