--- a/universal_campaign_frontend/assets/error_config.json
+++ b/universal_campaign_frontend/assets/error_config.json
@@ -140,6 +140,18 @@
             "submitDetailsError": ""
         },
         "donationAmounts": []
+    },
+    "widgets": {
+      "signupForm": {
+        "title": "",
+        "endorseText": "",
+        "getInvolvedText": "",
+        "automatedMessagingText": "",
+        "emailOptInText": "",
+        "legalText": "",
+        "submitButtonText": "",
+        "privacyPolicyText": ""
+      }
     }
   },
   "assets": {
