--- a/universal_campaign_frontend/assets/error_config.json
+++ b/universal_campaign_frontend/assets/error_config.json
@@ -11,7 +11,31 @@
     "backgroundColor": "#FFFFFF",
     "textColor": "#000000",
     "fontFamily": "Roboto",
-    "secondaryFontFamily": "Roboto"
+    "secondaryFontFamily": "Roboto",
+    "issuesSectionTheme": {
+      "backgroundColor": "#FFFFFF",
+      "textColor": "#000000",
+      "buttonColor": "#FF0000",
+      "buttonTextColor": "#FFFFFF"
+    },
+    "aboutMeSectionTheme": {
+      "backgroundColor": "#FFFFFF",
+      "textColor": "#000000",
+      "buttonColor": "#FF0000",
+      "buttonTextColor": "#FFFFFF"
+    },
+    "endorsementsSectionTheme": {
+      "backgroundColor": "#FFFFFF",
+      "textColor": "#000000",
+      "buttonColor": "#FF0000",
+      "buttonTextColor": "#FFFFFF"
+    },
+    "donateSectionTheme": {
+      "backgroundColor": "#FFFFFF",
+      "textColor": "#000000",
+      "buttonColor": "#FF0000",
+      "buttonTextColor": "#FFFFFF"
+    }
   },
   "content": {
     "siteTitle": "Error",
@@ -169,3 +193,4 @@
         "logoPath": ""
     }
   }
+}
