--- a/universal_campaign_frontend/pubspec.yaml
+++ b/universal_campaign_frontend/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   web: ^1.0.0
   http: ^1.2.1
   flutter_stripe: ^10.1.1
+  provider: ^6.0.0
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
